--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/screepers/screeps-typescript-starter#readme",
   "engines": {
-    "node": "10.x || 12.x"
+    "node": "18.x"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
@@ -56,7 +56,7 @@
     "prettier": "^2.3.2",
     "rollup": "^2.56.2",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-screeps": "^0.1.2",
+    "rollup-plugin-screeps": "^1.0.1",
     "rollup-plugin-typescript2": "^0.31.0",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
@@ -65,6 +65,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.15",
     "screeps-profiler": "^2.0.1",
     "source-map": "~0.6.1"
   }
